added jekyll-contenblocks and moved mailchimp assets to header with it

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 
 # Build settings
 markdown: kramdown
+exclude:
+ - "Gemfile"
+ - "Gemfile.lock"
